Task instance Java/6